additional cross referencing referenced the manhattan plots

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -713,7 +713,7 @@ The general format that I want for this section is to get:
 - pathway/ontology terms
 -->
 
-In this subsection results will be presented first for those that were in common between all Polynesian populations and the sub-groups of East and West Polynesia. Following this, the results for individual Polynesian populations will be presented. A complete table of all genes that had results meeting the various thresholds for the various statistics used can be found in the Appendix Table \@ref(tab:intrasfsPol).
+In this subsection results will be presented first for those that were in common between all Polynesian populations and the sub-groups of East and West Polynesia. Following this, the results for individual Polynesian populations will be presented. A complete table of all genes that had results meeting the various thresholds for the various statistics used can be found in the Appendix Tables \@ref(tab:intrasfsPol) (\gls{sfs}-based statistics), \@ref(tab:ihsnslPolgenes) (\gls{ihs} and \gls{nsl}), and \@ref(tab:xpehhPolgenes) (\gls{xpehh}).
 
 There were `r genelists %>% NROW()` genes that were associated with urate and metabolic diseases from the \gls{gwas} catalog (see Table \@ref(tab:gwascatref) for references), with `r bind_rows(sig_ihs_val, sig_nsl_val) %>% select(pop, SYMBOL = genename) %>% bind_rows(., lower_sig_stats %>% select(pop, SYMBOL)) %>% filter(SYMBOL %in% genelists$genename, pop %in% poly_pop) %>% select(SYMBOL) %>% distinct() %>% NROW()` having at least a single window from the lower tail, or \gls{snp} meeting a threshold for a single statistic in the Polynesian populations. Genes reported here were highlighted based on three criteria: a significant haplotypic result in multiple Polynesian populations, or having multiple statistics meeting the significance threshold in at least a single Polynesian population, or the locus only having the main significant result in Polynesian populations, with minimal signal in other populations, i.e. multiple significant markers in Polynesian populations and one or two in other populations.
 
@@ -980,7 +980,7 @@ rm(wh,wh_df,marker_plot, p1)
 
 ##### Genes with possible selection in Polynesian populations
 
-A complete list of all of the genes that had windows in the 1^st^ percentile and values < 0 for the Polynesian populations can be found in table \@ref(tab:intrasfsPol). A complete list of genes that had significant \gls{ihs} or \gls{nsl} in Polynesian populations can be found in Tables \@ref(tab:ihsPolgenes), \@ref(tab:nslPolgenes), and \@ref(tab:xpehhPolgenes).
+A complete list of all of the genes that had windows in the 1^st^ percentile and values < 0 for the Polynesian populations can be found in table \@ref(tab:intrasfsPol). A complete list of genes that had significant \gls{ihs} or \gls{nsl} in Polynesian populations can be found in Appendix Tables \@ref(tab:ihsnslPolgenes), and \@ref(tab:xpehhPolgenes).
 
 
 
@@ -1124,7 +1124,6 @@ xpehh %>%
 
 F~ST~ was calculated in sliding windows of 10 kb across the genome, pair-wise between the Polynesian populations and all other populations. Similar to the results for the F~ST~ calculated on entire chromosomes (section \@ref(wholeFst)), the mean F~ST~ using windows had the Polynesian populations most differentiated from the \gls{afr} populations. The range of mean F~ST~ was from 0.148 to 0.203. The Polynesian populations were least differentiated from the \gls{eas} populations with a range of F~ST~ means from 0.051 to 0.076. Between the Polynesian populations the mean F~ST~ ranged from 0.004, between the Western Polynesian populations of \gls{sam} and \gls{ton}, to 0.029 between \gls{nzm} and \gls{sam}. The Eastern Polynesian populations had a marginally higher mean F~ST~ than the Western Polynesian populations at 0.006. The largest maximum F~ST~ of 0.888, across four windows, was between \gls{ton} and \gls{msl} at chr17:62455002-62495001. This same region was the maximum F~ST~ for the \gls{cim} and \gls{nzm}, and the second largest for \gls{sam}, all with \gls{msl}. The maximum F~ST~ between the Polynesian populations was between `r intra_pol_max_fst %>% ungroup() %>% filter(max(fst)==fst) %>% .[['pop1']]` and `r intra_pol_max_fst %>% ungroup() %>% filter(max(fst)==fst) %>% .[['pop2']]`, with a value of `r intra_pol_max_fst %>% ungroup() %>% filter(max(fst)==fst) %>% .[['fst']] %>% three_dp()` at chr`r as.character(intra_pol_max_fst %>% ungroup() %>% filter(max(fst)==fst) %>% .[['chrom']])`:`r as.character(intra_pol_max_fst %>% ungroup() %>% filter(max(fst)==fst) %>% .[['chrom_start']])`-`r as.character(intra_pol_max_fst %>% ungroup() %>% filter(max(fst)==fst) %>% .[['chrom_end']])`. The smallest maximum F~ST~ of the Polynesian populations was between `r intra_pol_max_fst %>% ungroup() %>% filter((min(fst))==fst) %>% .[['pop1']]` and `r intra_pol_max_fst %>% ungroup() %>% filter(min(fst)==fst) %>% .[['pop2']]`, with a value of `r intra_pol_max_fst %>% ungroup() %>% filter(min(fst)==fst) %>% .[['fst']] %>% three_dp()` at chr`r as.character(intra_pol_max_fst %>% ungroup() %>% filter(min(fst)==fst) %>% .[['chrom']])`:`r as.character(intra_pol_max_fst %>% ungroup() %>% filter(min(fst)==fst) %>% .[['chrom_start']])`-`r as.character(intra_pol_max_fst %>% ungroup() %>% filter(min(fst)==fst) %>% .[['chrom_end']])`.
 
-> Tony: so do these maximised Fst segments indicate different sources of introgressed segments?
 
 <!-- XXX Tony: so do these maximised Fst segments indicate different sources of introgressed segments? -->
 
@@ -1227,13 +1226,12 @@ consec_lower_regions %>% filter( pop == 'CIM') %>% inner_join(., bind_rows(sig_i
 
 ##### Selection from haplotypic statistics in \gls{cim}.
 
+The significant \gls{ihs} and \gls{nsl} values after conversion to a P-value are show by position across the genome as a Manhattan plot in Figure \@ref(fig:cimHapMan). The most extreme markers for \gls{ihs} (by genomic position, -log~10~(P) > 4.8) were chr2: rs11683451, rs2890456, and rs6755308; chr4: rs17060079; chr8: rs2319924; chr11: rs7931930 and rs11212617; chr20: rs647518; chr21: rs28559700.  The most extreme markers for \gls{nsl} (by genomic position, -log~10~(P) > 4.8) were chr4: rs1491411; chr11: rs543215 and rs1963626; chr12: rs7977414. Within the most extreme 100 \gls{ihs} values, there were 37 genes. For \gls{nsl} there was 45 genes. Eighteen of these genes were in common, with _C11orf65_ and _CNTN4_ having at least five significant \glspl{snp} each. The gene with the most significant \glspl{snp} out of any population was _CNTN4_ in \gls{cim} with 27 markers having a significant \gls{ihs} score. The only other population with more than two significant \glspl{snp} was \gls{nzm} with 14. There were four genes represented in the top 100 markers that were associated with obesity or \gls{t2d}, these were: _ADCY9_, _ARL15_, _PSMD6_, and _ZFAND6_. In total there were `r sig_ihs_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{cim} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop !="CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. There were 57 genes that had at least 20 populations with significant markers for \gls{xpehh} in only \gls{cim} from the Polynesian populations. _ARL15_ was associated with obesity and \gls{t2d} [@shungin2015genetic; @mahajan2014genome] and _RREB1_ was associated with \gls{t2d} and urate [@mahajan2014genome; @Kottgen2013]. 
 
-Within the most extreme 100 \gls{ihs} values, there were 37 genes. For \gls{nsl} there was 45 genes. Eighteen of these genes were in common, with _C11orf65_ and _CNTN4_ having at least five significant \glspl{snp} each. The gene with the most significant \glspl{snp} out of any population was _CNTN4_ in \gls{cim} with 27 markers having a significant \gls{ihs} score. The only other population with more than two significant \glspl{snp} was \gls{nzm} with 14. There were four genes represented in the top 100 markers that were associated with obesity or \gls{t2d}, these were: _ADCY9_, _ARL15_, _PSMD6_, and _ZFAND6_. In total there were `r sig_ihs_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{cim} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop !="CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. There were 57 genes that had at least 20 populations with significant markers for \gls{xpehh} in only \gls{cim} from the Polynesian populations. _ARL15_ was associated with obesity and \gls{t2d} [@shungin2015genetic; @mahajan2014genome] and _RREB1_ was associated with \gls{t2d} and urate [@mahajan2014genome; @Kottgen2013]. 
+(ref:cimHapMan) Manhattan plot for significant markers in \gls{cim} for both \gls{ihs} and \gls{nsl}.
 
-(ref:cimHapMan) Manhattan plot for significant markers in \gls{cim} for both \gls{ihs} and \gls{nsl}
-
-```{r cimHapMan, out.extra='angle=90', fig.cap = '(ref:cimHapMan)', fig.width = 7, message= FALSE}
-#ggsave(filename = 'images/03_selectionpipeline/cimHapMan.png',width = 7, plot = bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'CIM') %>% mutate(P = 1- pnorm(abs(statvalue)), statid = case_when(statid == 20 ~ 'nSL', statid== 26 ~ 'iHS')) %>% left_join(markers, by = c('chrom', 'chrom_start')) %>% rename(CHR = chrom, BP = chrom_start, SNP = marker)%>% ggman::ggmanhattan(.) + facet_grid(statid~.) )
+```{r cimHapMan, out.extra='angle=90', fig.cap = '(ref:cimHapMan)', out.height = "40%", message= FALSE, warning = FALSE, fig.align='center'}
+ggsave(filename = 'images/03_selectionpipeline/cimHapMan.png',width = 10, plot = bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'CIM') %>% mutate(P = 1- pnorm(abs(statvalue)), statid = case_when(statid == 20 ~ 'nSL', statid== 26 ~ 'iHS')) %>% left_join(markers, by = c('chrom', 'chrom_start')) %>% rename(CHR = chrom, BP = chrom_start, SNP = marker)%>% ggman::ggmanhattan(.,significance = 0) + facet_grid(statid~.) )
 
 knitr::include_graphics('images/03_selectionpipeline/cimHapMan.png')
 ```
@@ -1526,13 +1524,13 @@ The pathway gene-set enrichment analysis from Enrichr on the KEGG 2016 pathways 
 
 ##### Selection from haplotypic statistics in \gls{nzm}.
 
-From the haplotypic tests for selection (\gls{ihs} and \gls{nsl}) there were `r sig_ihs_val %>% filter(pop == "NZM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "NZM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{nzm} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "NZM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop != "NZM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. Looking at the genes represented by the most extreme 100 \gls{ihs} and \gls{nsl} markers there were 30 genes for \gls{ihs}, and 40 genes for \gls{nsl}. There were 12 genes in common between the two sets (_CTNNA3_, _WWOX_, _KCNS3_, _NRXN1_, _ADAM29_, _VSNL1_, _BCCIP_, _BICD1_, _DHX32_, _SLC35F2_, _STAU2_, and _TENM3_). _CTNNA3_ had five markers in the top 100 for \gls{nsl} (rs2441727, rs12220315, rs1911341, rs2660024, and rs10997250), and was also the gene for \gls{nzm} that had the most overall significant markers for both \gls{ihs} and \gls{nsl}. There were 40 genes that had at least 20 populations with significant markers for \gls{xpehh} in only NZM from the Polynesian populations, only one (_PAX5_) of which was associated with obesity [@melka2012genome]. There were `r bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'NZM', genename != "")%>% select(pop, "SYMBOL" = genename ) %>% distinct() %>% inner_join(., lower_sig_stats %>% filter(pop == 'NZM')%>% select(pop, SYMBOL, statname) %>% distinct() %>% filter(!is.na(SYMBOL)) %>% group_by(SYMBOL) %>% tally() %>% filter(n >= 3), by = "SYMBOL") %>% NROW() %>% num_to_word()` genes, _LYST_, _PHIP_, _CTNNA3_, _RAD51AP2_, _SUPT3H_, _EPB41L4A_, _RAD51B_, and _VSNL1_, that had at least one significant marker for \gls{ihs} or \gls{nsl}, and also had a window in the 1^st^ percentile from three or more statistics from \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}.
 
-(ref:nzmHapMan) Manhattan plot for significant markers in \gls{nzm} for both \gls{ihs} and \gls{nsl}
+The significant markers from \gls{ihs} and \gls{nsl} were converted to P-values and plotted on a Manhattan plot (Figure \@ref(fig:nzmHapMan)). The most extreme markers for \gls{ihs} (by position, -log~10~(P) > 4.8) were: chr2  - rs2710684; chr3 - rs74823804 and rs2280162; chr8 - rs11987519; chr9 - rs2780246; chr10 - rs4075326 and rs11017145; chr16 - rs28564718 and rs3743759. For \gls{nsl}, the markers were: chr4 - rs1491411; chr8 - rs11987519; chr12 - rs7977414. From the haplotypic tests for selection (\gls{ihs} and \gls{nsl}) there were `r sig_ihs_val %>% filter(pop == "NZM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "NZM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{nzm} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "NZM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop != "NZM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. Looking at the genes represented by the most extreme 100 \gls{ihs} and \gls{nsl} markers there were 30 genes for \gls{ihs}, and 40 genes for \gls{nsl}. There were 12 genes in common between the two sets (_CTNNA3_, _WWOX_, _KCNS3_, _NRXN1_, _ADAM29_, _VSNL1_, _BCCIP_, _BICD1_, _DHX32_, _SLC35F2_, _STAU2_, and _TENM3_). _CTNNA3_ had five markers in the top 100 for \gls{nsl} (rs2441727, rs12220315, rs1911341, rs2660024, and rs10997250), and was also the gene for \gls{nzm} that had the most overall significant markers for both \gls{ihs} and \gls{nsl}. There were 40 genes that had at least 20 populations with significant markers for \gls{xpehh} in only NZM from the Polynesian populations, only one (_PAX5_) of which was associated with obesity [@melka2012genome]. There were `r bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'NZM', genename != "")%>% select(pop, "SYMBOL" = genename ) %>% distinct() %>% inner_join(., lower_sig_stats %>% filter(pop == 'NZM')%>% select(pop, SYMBOL, statname) %>% distinct() %>% filter(!is.na(SYMBOL)) %>% group_by(SYMBOL) %>% tally() %>% filter(n >= 3), by = "SYMBOL") %>% NROW() %>% num_to_word()` genes, _LYST_, _PHIP_, _CTNNA3_, _RAD51AP2_, _SUPT3H_, _EPB41L4A_, _RAD51B_, and _VSNL1_, that had at least one significant marker for \gls{ihs} or \gls{nsl}, and also had a window in the 1^st^ percentile from three or more statistics from \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}.
 
-```{r nzmHapMan, out.extra='angle=90', fig.cap = '(ref:nzmHapMan)', fig.width = 7, message=FALSE}
-#ggsave(filename = 'images/03_selectionpipeline/nzmHapMan.png',width = 7, plot = bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'NZM') %>% mutate(P = 1- pnorm(abs(statvalue)), statid = case_when(statid == 20 ~ 'nSL', statid== 26 ~ 'iHS')) %>% left_join(markers, by = c('chrom', 'chrom_start')) %>% rename(CHR = chrom, BP = chrom_start, SNP = marker)%>% ggman::ggmanhattan(.) + facet_grid(statid~.)
-#       )
+(ref:nzmHapMan) Manhattan plot for significant markers in \gls{nzm} for both \gls{ihs} and \gls{nsl}.
+
+```{r nzmHapMan, out.extra='angle=90', fig.cap = '(ref:nzmHapMan)', out.height = "40%", message=FALSE, warning=FALSE, fig.align='center'}
+ggsave(filename = 'images/03_selectionpipeline/nzmHapMan.png',width = 10, plot = bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'NZM') %>% mutate(P = 1- pnorm(abs(statvalue)), statid = case_when(statid == 20 ~ 'nSL', statid== 26 ~ 'iHS')) %>% left_join(markers, by = c('chrom', 'chrom_start')) %>% rename(CHR = chrom, BP = chrom_start, SNP = marker)%>% ggman::ggmanhattan(., significance = 0) + facet_grid(statid~.)       )
 knitr::include_graphics('images/03_selectionpipeline/nzmHapMan.png')
 ```
 
@@ -1738,16 +1736,15 @@ inner_join(sam_nsl_100, sam_ihs_100, by = 'genename' ) %>% mutate(total = n.x + 
 rm(p)
 ```
 
-From the haplotypic tests for selection (\gls{ihs} and \gls{nsl}) there were `r sig_ihs_val %>% filter(pop == "SAM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "SAM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{sam} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "SAM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop != "SAM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. The genes with the most significant markers for \gls{ihs} were _CDH23_ and _CNTN5_ with 12 significant markers each. The gene with the most significant markers for \gls{nsl} was _CDH23_ with 16 markers. Looking at the most extreme 100 markers for \gls{nsl} there were 35 genes represented, _SNX29_ had the most with three markers (rs350277, rs7201595, and rs12931604). For \gls{ihs}, the gene with the most markers in the most extreme 100 was _C11orf65_, with three (). There was a total of 39 genes represented. Between the top markers for both \gls{ihs} and \gls{nsl} there were 10 genes that were in common (_SNX29_, _LINC00693_, _BANK1_, _DLC1_, _DUSP13_, _HBE1_, _HBG2_, _MYCBP2_, _NLRP1_, and _SAMD8_). 
+The significant markers for \gls{ihs} and \gls{nsl} are shown by position across the genome as a Manhattan plot after conversion to P-values in Figure \@ref(fig:samHapMan). The most extreme markers for \gls{ihs} (by position, -log~10~(P)) were: chr1 - rs10495181; chr4 - rs12331849; chr11 - rs6578634; chr13 - rs4941616; chr16 - rs12596728. For \gls{nsl} they were: chr17 - rs11654176 and rs1860316. From the haplotypic tests for selection (\gls{ihs} and \gls{nsl}) there were `r sig_ihs_val %>% filter(pop == "SAM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "SAM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{sam} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "SAM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop != "SAM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. The genes with the most significant markers for \gls{ihs} were _CDH23_ and _CNTN5_ with 12 significant markers each. The gene with the most significant markers for \gls{nsl} was _CDH23_ with 16 markers. Looking at the most extreme 100 markers for \gls{nsl} there were 35 genes represented, _SNX29_ had the most with three markers (rs350277, rs7201595, and rs12931604). For \gls{ihs}, the gene with the most markers in the most extreme 100 was _C11orf65_, with three (rs425538, rs7931930, and rs11212617). There was a total of 39 genes represented. Between the top markers for both \gls{ihs} and \gls{nsl} there were 10 genes that were in common (_SNX29_, _LINC00693_, _BANK1_, _DLC1_, _DUSP13_, _HBE1_, _HBG2_, _MYCBP2_, _NLRP1_, and _SAMD8_). 
 
 There were `r bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'SAM', genename != "")%>% select(pop, "SYMBOL" = genename ) %>% distinct() %>% inner_join(., lower_sig_stats %>% filter(pop == 'SAM')%>% select(pop, SYMBOL, statname) %>% distinct() %>% filter(!is.na(SYMBOL)) %>% group_by(SYMBOL) %>% tally() %>% filter(n >= 3), by = "SYMBOL") %>% NROW() %>% num_to_word()` genes that had windows from at least three of the frequency-based statistics and also had at least a single significant marker for either \gls{ihs} or \gls{nsl}. The genes were _DISP1_ (\gls{ihs}: rs2789931 and rs2789954), _PARD3B_ (\gls{ihs} and \gls{nsl}: rs13000345), _C4orf45_ (\gls{ihs} and \gls{nsl}: rs11722868), _NEK1_ (\gls{ihs}: rs4235024), _CNTNAP2_ (\gls{ihs}: rs2620441, rs2249958, and rs17170777; \gls{nsl}: rs2249958, rs17170777, and rs10255956), _CTNNA3_ (\gls{ihs}: rs1948946; \gls{nsl} rs4297361,rs1948946, rs2764813, rs2394324, and rs10823054), _CEP112_ (\gls{ihs}: rs11652795; \gls{nsl} rs1373074), _CNTNAP5_ (\gls{nsl}: rs314710 and rs2602647), _SUPT3H_ (\gls{nsl}: rs9472376), and _DGKI_ (\gls{nsl}: rs12056089). \gls{xpehh} had 19 genes that had at least 20 populations with significant markers in only \gls{sam} from the Polynesian populations but none had been associated with urate or related co-morbidities.
 
-(ref:samHapMan) Manhattan plot for significant markers in \gls{sam} for both \gls{ihs} and \gls{nsl}
+(ref:samHapMan) Manhattan plot for significant markers in \gls{sam} for both \gls{ihs} and \gls{nsl}.
 
-```{r samHapMan, out.extra='angle=90', fig.cap = '(ref:samHapMan)', fig.width = 7, message = FALSE}
-#ggsave(filename = 'images/03_selectionpipeline/samHapMan.png',width = 7, plot =
-#bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'SAM') %>% mutate(P = 1- pnorm(abs(statvalue)), statid = case_when(statid == 20 ~ 'nSL', statid== 26 ~ 'iHS')) %>% left_join(markers, by = c('chrom', 'chrom_start')) %>% rename(CHR = chrom, BP = chrom_start, SNP = marker)%>% ggman::ggmanhattan(.) + facet_grid(statid~.)
-#)
+```{r samHapMan, out.extra='angle=90', fig.cap = '(ref:samHapMan)', fig.align='center', out.height = "40%", message = FALSE, warning = FALSE}
+ggsave(filename = 'images/03_selectionpipeline/samHapMan.png',width = 10, plot = bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'SAM') %>% mutate(P = 1- pnorm(abs(statvalue)), statid = case_when(statid == 20 ~ 'nSL', statid== 26 ~ 'iHS')) %>% left_join(markers, by = c('chrom', 'chrom_start')) %>% rename(CHR = chrom, BP = chrom_start, SNP = marker)%>% ggman::ggmanhattan(.,significance = 0) + facet_grid(statid~.)
+)
 knitr::include_graphics('images/03_selectionpipeline/samHapMan.png')
 ```
 
@@ -1937,16 +1934,14 @@ inner_join(ton_nsl_100, ton_ihs_100, by = 'genename' ) %>% mutate(total = n.x + 
 rm(p)
 ```
 
-
-In total there were `r sig_ihs_val %>% filter(pop == "TON") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "TON") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{ton} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "TON") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop !="TON") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. In the most extreme 100 \gls{nsl} marker scores, there were 32 genes represented with _SNX29_ having three markers (rs350277, rs7201595, and rs12931604), and _CDH23_ having two (rs2394801 and rs10762462) from the 100. The most extreme 100 marker scores for \gls{ihs} had 30 genes represented with SNX29 having five markers (rs350277, rs7201595, rs7198595, rs7189759, and rs12931604), _PCDH15_ having three (rs4272709, rs11004106, and rs4935502), and _DNAH11_ having two (rs10485976 and rs1989904) of the 100. There was an overlap between the two genelists for the most extreme 100 of six genes, with _SNX29_, and _DNAH11_ having the most number of extreme markers for both \gls{ihs}, and \gls{nsl}. The genes with the most number of significant markers overall for \gls{ihs} and \gls{nsl} were _CPNE4_ (16 markers for both \gls{ihs} and \gls{nsl}), _SNX29_ (15 markers for \gls{ihs} and 16 for \gls{nsl}), _CDH23_ (11 markers for \gls{ihs} and 12 for \gls{nsl}), _PCDH15_ (12 markers for \gls{nsl}), and _BANK1_ (9 markers for \gls{ihs} and 10 for \gls{nsl}). There were 37 genes that had at least 20 populations with significant markers for \gls{xpehh} in only TON from the Polynesian populations, including _IGF1R_, _JAZF1_, and _PEPD_ which had been associated with urate or co-morbidities. 
+The significant markers for \gls{ihs} and \gls{nsl} were plotted genome-wide after conversion to P-values in a Manhattan plot (Figure \@ref(fig:tonHapMan)). The most extreme \gls{ihs} markers (by position, -log~10~(P)) were: chr1 - rs12042853, rs10495181, rs4240931, and rs2800853; chr7 - rs10485976, rs6962297, rs296307, rs6969276, rs7791859, and rs1405425; chr8 - rs4349972; chr10 - rs7097067 and rs7923688; chr11 - rs6578634; chr13 - rs4941616; chr16 rs154148 and rs350277; chr17 - rs6504539, rs1860316 and rs16976276. For \gls{nsl} they were: chr7 - rs7791859 and rs1405425; chr8 - rs2605867; chr13 - rs4941616; chr16 - rs350277. In total there were `r sig_ihs_val %>% filter(pop == "TON") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "TON") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{ton} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "TON") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop !="TON") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. In the most extreme 100 \gls{nsl} marker scores, there were 32 genes represented with _SNX29_ having three markers (rs350277, rs7201595, and rs12931604), and _CDH23_ having two (rs2394801 and rs10762462) from the 100. The most extreme 100 marker scores for \gls{ihs} had 30 genes represented with SNX29 having five markers (rs350277, rs7201595, rs7198595, rs7189759, and rs12931604), _PCDH15_ having three (rs4272709, rs11004106, and rs4935502), and _DNAH11_ having two (rs10485976 and rs1989904) of the 100. There was an overlap between the two genelists for the most extreme 100 of six genes, with _SNX29_, and _DNAH11_ having the most number of extreme markers for both \gls{ihs}, and \gls{nsl}. The genes with the most number of significant markers overall for \gls{ihs} and \gls{nsl} were _CPNE4_ (16 markers for both \gls{ihs} and \gls{nsl}), _SNX29_ (15 markers for \gls{ihs} and 16 for \gls{nsl}), _CDH23_ (11 markers for \gls{ihs} and 12 for \gls{nsl}), _PCDH15_ (12 markers for \gls{nsl}), and _BANK1_ (9 markers for \gls{ihs} and 10 for \gls{nsl}). There were 37 genes that had at least 20 populations with significant markers for \gls{xpehh} in only TON from the Polynesian populations, including _IGF1R_, _JAZF1_, and _PEPD_ which had been associated with urate or co-morbidities. 
 
 Combining the genes with at least a single significant marker for either \gls{ihs} or \gls{nsl} with the windows in the 1^st^ percentile for at least three frequency-based intra-population selection and neutrality statistics had `r bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'TON', genename != "")%>% select(pop, "SYMBOL" = genename ) %>% distinct() %>% inner_join(., lower_sig_stats %>% filter(pop == 'TON')%>% select(pop, SYMBOL, statname) %>% distinct() %>% filter(!is.na(SYMBOL)) %>% group_by(SYMBOL) %>% tally() %>% filter(n >= 3), by = "SYMBOL") %>% NROW() %>% num_to_word()` genes that met this criteria. They were _C4orf45_, _SUPT3H_, _CTNNA3_, _SAMD8_, _EXT2_, _LPO_, and _NRXN3._
 
-(ref:tonHapMan) Manhattan plot for significant markers in \gls{ton} for both \gls{ihs} and \gls{nsl}
+(ref:tonHapMan) Manhattan plot for significant markers in \gls{ton} for both \gls{ihs} and \gls{nsl}.
 
-```{r tonHapMan, out.extra='angle=90', fig.cap = '(ref:tonHapMan)', fig.width = 7, message=FALSE}
-#ggsave(filename  = 'images/03_selectionpipeline/tonHapMan.png',width = 7, plot = bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'TON') %>% mutate(P = 1- pnorm(abs(statvalue)), statid = case_when(statid == 20 ~ 'nSL', statid== 26 ~ 'iHS')) %>% left_join(markers, by = c('chrom', 'chrom_start')) %>% rename(CHR = chrom, BP = chrom_start, SNP = marker)%>% ggman::ggmanhattan(.) + facet_grid(statid~.)
-#)
+```{r tonHapMan, out.extra='angle=90', fig.cap = '(ref:tonHapMan)', out.height = "40%", message=FALSE, warning = FALSE, fig.align='center'}
+ggsave(filename  = 'images/03_selectionpipeline/tonHapMan.png',width = 10, plot = bind_rows(sig_ihs_val, sig_nsl_val) %>% filter(pop == 'TON') %>% mutate(P = 1- pnorm(abs(statvalue)), statid = case_when(statid == 20 ~ 'nSL', statid== 26 ~ 'iHS')) %>% left_join(markers, by = c('chrom', 'chrom_start')) %>% rename(CHR = chrom, BP = chrom_start, SNP = marker)%>% ggman::ggmanhattan(., significance = 0) + facet_grid(statid~.))
 knitr::include_graphics('images/03_selectionpipeline/tonHapMan.png')
 ```
 
@@ -2703,7 +2698,7 @@ There were `r length(unique(kd_GR$SYMBOL))` genes that were associated with kidn
 kdPol %>% mutate_all(., function(x){replace(x, x == 0, "")}) %>%
   mutate(genename = map_chr(genename, ~ cell_spec(.x, italic = TRUE, format = 'latex'))) %>% 
   kable(., caption = '(\\#tab:kdPol) Kidney disease-associated loci that showed signs of possible selection in Polynesian populations', longtable = TRUE, format = 'latex', escape = FALSE, booktabs = TRUE,
-        col.names = c('Population','Gene','AFR','AMR','EAS','EUR','POL','SAS','iHS','nSL',"Fay \\& Wu's H", "Fu \\& Li's F", "Tajima's D"," Zeng's E")) %>% kableExtra::row_spec(0, angle = 90) %>% kable_styling(latex_options = "repeat_header", font_size = 8) %>% 
+        col.names = c('Population','Gene','AFR','AMR','EAS','EUR','POL','SAS','iHS','nSL',"Fay \\& Wu's H", "Fu \\& Li's F", "Tajima's D"," Zeng's E")) %>% kableExtra::row_spec(0, angle = 90) %>%add_header_above(., c("","","XP-EHH" = 6, rep("",6)))%>%  kable_styling(latex_options = "repeat_header", font_size = 8) %>% 
    kableExtra::footnote(general = c("XP-EHH is the number of populations from the super population that had at", 
                                    "least one marker sigificant in the gene. Integrated haplotype homozygosity",
                                    "score and nSL are the number of significant markers. Fay and Wu's H,",
@@ -2753,7 +2748,7 @@ metsynPol %>% mutate_all(., function(x){replace(x, x == 0, "")}) %>%
   mutate(genename = map_chr(genename, ~ cell_spec(.x, italic = TRUE, format = 'latex'))) %>% 
   kable(., caption = '(\\#tab:metsynTab) Metabolic syndrome-associated genes that showed signs of possible selection in Polynesian populations', 
         longtable = TRUE, format = 'latex', booktabs = TRUE, escape = FALSE,
-        col.names = c('Population','Gene','AFR','AMR','EAS','iHS','nSL',"Fay \\& Wu's H", " Fu \\& Li's F", "Tajima's D"," Zeng's E")) %>% kableExtra::row_spec(0, angle = 90) %>% kable_styling(latex_options = "repeat_header", font_size = 8) %>% 
+        col.names = c('Population','Gene','AFR','AMR','EAS','iHS','nSL',"Fay \\& Wu's H", " Fu \\& Li's F", "Tajima's D"," Zeng's E")) %>% kableExtra::row_spec(0, angle = 90) %>%add_header_above(., c("","","XP-EHH" = 6, rep("",6)))%>%  kable_styling(latex_options = "repeat_header", font_size = 8) %>% 
    kableExtra::footnote(general = c("XP-EHH is the number of populations from the super population that had at", 
                                    "least one marker sigificant in the gene. Integrated haplotype homozygosity",
                                    "score and nSL are the number of significant markers. Fay and Wu's H,",
@@ -3073,7 +3068,7 @@ rs2329371	0.723	0.531	0.51	0.744	1.0	0.707	0.698
 rs1451375	0.492	0.319	0.611	0.497	0.707	1.0	0.988
 rs1966839	0.49	0.316	0.607	0.495	0.698	0.988	1.0", header = TRUE)
 
-ddc_eas_r2 %>% dplyr::rename(`Rs number` = RS_number) %>% kable(format = 'latex', caption = '(\\#tab:ddcLd) Linkage disequillibrium in EAS populations (R\\textsuperscript{2}) between markers in \\textit{DDC}', escape = FALSE, booktabs = TRUE) %>% kableExtra::row_spec(0, angle = 90)
+ddc_eas_r2 %>% dplyr::rename(`Rs number` = RS_number) %>% kable(format = 'latex', caption = '(\\#tab:ddcLd) Linkage disequillibrium in EAS populations (R\\textsuperscript{2}) between markers in \\textit{DDC}.', escape = FALSE, booktabs = TRUE) %>% kableExtra::row_spec(0, angle = 90)
 ```
 
 
