--- a/A5-Supplementary_Tables.Rmd
+++ b/A5-Supplementary_Tables.Rmd
@@ -18,10 +18,13 @@ library(phdFunctions)
 ```{r}
 sig_ihs_val <- readRDS('~/data/NZ_coreExome_1kgp/haplotype/sig_ihs_values_with_genes_14-11-2017.RDS') %>% filter(abs(statvalue) > 2.6 )
 sig_nsl_val <- readRDS('~/data/NZ_coreExome_1kgp/haplotype/sig_nsl_values_with_genes_14-11-2017.RDS') %>% filter(abs(statvalue) > 2.6 )
+markers <- read.table('~/data/NZ_coreExome_1kgp/nz_1kg_markers.txt', stringsAsFactors = FALSE, header = FALSE)
+names(markers) <- c("chrom","chrom_start","marker","ref","alt") 
 ```
 
+### Hider Regions
 
-```{r}
+```{r, results='hold'}
 hider_regions_found <- readRDS('data/03-hider-regions-found.RDS')
 hider_regions_found %>% mutate_at(4:NCOL(.), funs(replace_na(., '-'))) %>% mutate(chr = as.numeric(str_sub(chrom, 4)))%>% arrange(chr, chrom_start) %>% select(-chr) %>% kable(., col.names = c("Chrom","Start", "End", "\\gls{td} Region", "\\gls{td} Present","\\gls{fwh} Region", "\\gls{fwh} Present", "\\gls{flf} Region", "\\gls{flf} Present", '\\gls{ihs} Region', '\\gls{ihs} Present'), format = 'latex', booktabs = TRUE, longtable = TRUE, linesep ='', caption = '(\\#tab:hiderRegionsFound)', escape = FALSE) %>% column_spec(4:11, width = "5em") %>% kable_styling(latex_options = c('repeat_header'),font_size = 8) %>% landscape()
 ```
@@ -69,7 +72,7 @@ create_sel_stat_table("Fu.Li.F","Mean Fu and Li F")
 create_sel_stat_table("Zeng.E", "Mean Zeng E")
 ```
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, results='hold'}
 # This is created by coreExome_100kb_windows_intra_filtered.Rmd
 chr_summary <- readRDS("~/data/NZ_coreExome_1kgp/100kbWindow_intra/filtered/100kbwindows_chr_summary_popgenome_filtered_3ns_resized.31-8-2017.RDS") %>% filter(stat != "Fu.Li.D")
 pops <- list()
@@ -82,8 +85,8 @@ global_summary <- readRDS("~/data/NZ_coreExome_1kgp/100kbWindow_intra/filtered/1
 
 ```
 
-```{r, echo = FALSE}
-global_summary  %>% left_join(., panel %>% select(pop, super_pop) %>% distinct(), by = 'pop') %>% arrange(super_pop) %>% select(stat, super_pop, pop, mean, sd, min, lower_1,median,upper_99, max)  %>% arrange(stat,super_pop, pop) %>%  data.frame() %T>% {write.csv(., file = '~/Git_repos/bookdown_thesis/Appendices/03-gsTable.csv', row.names = FALSE, quote = FALSE)} %>% head(0) %>% kable(., caption = '(\\#tab:gsTable) Global Summary Table', format = 'latex', booktabs = TRUE) %>% kable_styling(font_size = 8) %>% footnote(general = "Appendices/03-gsTable.csv")
+```{r, echo = FALSE, results='hold'}
+global_summary  %>% left_join(., panel %>% select(pop, super_pop) %>% distinct(), by = 'pop') %>% arrange(super_pop) %>% select(stat, super_pop, pop, mean, sd, min, lower_1,median,upper_99, max)  %>% arrange(stat,super_pop, pop) %>%  data.frame()%>% mutate(stat = case_when(stat == "Tajima.D" ~ "Tajima's D", stat == "Fay.Wu.H" ~ "Fay and Wu's H", stat == "Fu.Li.F" ~ "Fu and Li's F", stat == "Zeng.E" ~ "Zeng's E", stat == "n.segregating.sites" ~ 'Num. segregating sites' ))  %>% rename(Statistic = stat, 'Super Population' = super_pop, Population = pop, Mean = mean, SD = sd, Minimum = min, '1st Percentile' = lower_1, Median = median, '99th Percentile' = upper_99, Maximum = max)%T>% {write.csv(., file = '~/Git_repos/bookdown_thesis/Appendices/03-gsTable.csv', row.names = FALSE, quote = FALSE)} %>% kable(., caption = '(\\#tab:gsTable) Global Summary Table', format = 'latex', booktabs = TRUE, longtable = TRUE, linesep = "", digits = 3) %>% kable_styling(font_size = 8, latex_options = c('repeat_header')) %>% footnote(general = "Appendices/03-gsTable.csv")
 ```
 
 ```{r, warning =TRUE}
@@ -107,33 +110,46 @@ upper_sig_stats <- bind_rows(lapply(names(upper_sig_stats), function(y){
 
 ```
 
-```{r intrasfsPol}
+```{r intrasfsPol, results='hold'}
 # create a table of all of the loci that had windows in the 1st percentile and < 0 in value
-lower_sig_stats %>% filter( pop %in% c('CIM','NZM','SAM','TON')) %>% select(chrom, statname, SYMBOL, pop) %>% distinct() %>% spread(., key=pop, value = pop) %>% replace_na(list(CIM = "", NZM = "", SAM = "", TON = "")) %>% unite(., col = Pop, c('CIM','NZM','SAM','TON'), sep = ',')  %>% mutate(Pop = stringr::str_replace_all(Pop, "[,]+", ',') %>% stringr::str_replace_all(., pattern = '^[,]+|[,]$', replacement = "") %>% stringr::str_replace_all(., ",", ", ")) %>% mutate(chr = as.numeric(sapply(chrom, function(x){strsplit(x, split = 'r')[[1]][2]}))) %>% arrange(statname, chr) %>% select(statname, everything(), -chr) %>% filter(!is.na(SYMBOL)) %T>% {write.csv(., file = '~/Git_repos/bookdown_thesis/Appendices/03-intrasfsPol.csv', row.names = FALSE, quote = TRUE)} %>% head(0) %>% kable(., caption = '(\\#tab:intrasfsPol) All genes that had a window in the 1st percentile and value < 0 from a Polynesian population', booktabs = TRUE, format = 'latex') %>% footnote(general = "Electronic Supplement: Appendices/03-intrasfsPol.csv", escape = FALSE)
+lower_sig_stats %>% filter( pop %in% c('CIM','NZM','SAM','TON')) %>% select(chrom, statname, SYMBOL, pop) %>% distinct() %>% spread(., key=pop, value = pop) %>% replace_na(list(CIM = "", NZM = "", SAM = "", TON = "")) %>% unite(., col = Pop, c('CIM','NZM','SAM','TON'), sep = ',')  %>% mutate(Pop = stringr::str_replace_all(Pop, "[,]+", ',') %>% stringr::str_replace_all(., pattern = '^[,]+|[,]$', replacement = "") %>% stringr::str_replace_all(., ",", ", ")) %>% mutate(chr = as.numeric(sapply(chrom, function(x){strsplit(x, split = 'r')[[1]][2]}))) %>% arrange(statname, chr) %>% select(statname, everything(), -chr) %>% filter(!is.na(SYMBOL)) %>% mutate(stat = case_when(statname == "Tajima.D" ~ "Tajima's D", statname == "Fay.Wu.H" ~ "Fay and Wu's H", statname == "Fu.Li.F" ~ "Fu and Li's F", statname == "Zeng.E" ~ "Zeng's E" ))  %>% rename('Statistic' = statname, Chrom = chrom, 'Gene name' = SYMBOL, Population = Pop)  %T>% {write.csv(., file = '~/Git_repos/bookdown_thesis/Appendices/03-intrasfsPol.csv', row.names = FALSE, quote = TRUE)} %>% head(3) %>% kable(., caption = '(\\#tab:intrasfsPol) All genes that had a window in the 1st percentile and value < 0 from a Polynesian population', booktabs = TRUE, format = 'latex') %>% footnote(general = "Electronic Supplement: Appendices/03-intrasfsPol.csv", escape = FALSE, general_title = "")
 ```
 
-```{r}
+```{r, results='hold', eval = FALSE}
 
-sig_ihs_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, iHS = statvalue) %>% arrange(chrom, chrom_start, Pop) %T>% {write.csv(., file = "Appendices/03-ihs-Pol.csv", row.names = FALSE, quote = FALSE)}  %>% head(0) %>% kable(., booktabs = TRUE, format = 'latex', caption = '(\\#tab:ihsPolgenes) All genes that had a significant iHS value in Polynesian populations.') %>% kableExtra::footnote("Appendices/03-ihs-Pol.csv", threeparttable = TRUE)
+sig_ihs_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, iHS = statvalue) %>% arrange(chrom, chrom_start, Pop) %T>% {write.csv(., file = "Appendices/03-ihs-Pol.csv", row.names = FALSE, quote = FALSE)}  %>% head(3) %>% kable(., booktabs = TRUE, format = 'latex', caption = '(\\#tab:ihsPolgenes) All genes that had a significant iHS value in Polynesian populations.') %>% kableExtra::footnote("Appendices/03-ihs-Pol.csv", threeparttable = TRUE)
+
+```
+
+```{r, results='hold', eval = FALSE}
+
+sig_nsl_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, nSL = statvalue) %>% arrange(chrom, chrom_start, Pop) %T>% {write.csv(., file = "Appendices/03-nsl-Pol.csv", row.names = FALSE, quote = FALSE)}  %>% head(3) %>% kable(., booktabs = TRUE, format = 'latex', caption = '(\\#tab:nslPolgenes) All genes that had a significant nSL value in Polynesian populations.') %>% kableExtra::footnote("Appendices/03-nsl-Pol.csv", threeparttable = TRUE)
+
+```
+
+### Significant \gls{ihs} and \gls{nsl} markers in Polynesian populations
+
+```{r}
+full_join(sig_ihs_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, iHS = statvalue) %>% arrange(chrom, chrom_start, Pop)%>% spread(Pop, iHS), sig_nsl_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, nSL = statvalue) %>% arrange(chrom, chrom_start, Pop) %>% spread(Pop, nSL), by = c("chrom", "chrom_start", "chrom_end", "genename"), suffix= c("_ihs", "_nsl")) %>% select(-chrom_end) %>% rename(position = chrom_start) %>% mutate_at(vars(contains('_ihs'),contains('_nsl')), funs(three_dp)) %>% mutate_at(vars(contains('_ihs'),contains('_nsl')), funs(case_when(. == "NA" ~ "", TRUE ~ .))) %>% left_join(., markers %>% select(chrom, chrom_start, marker), by = c('chrom', "position" = 'chrom_start')) %>% select(chrom, position, marker, everything()) %>%  rename(Chromosome = chrom, Position = position, Marker = marker, 'Gene Name' = genename, 'CIM iHS' = CIM_ihs, 'NZM iHS' = NZM_ihs, 'SAM iHS' = SAM_ihs, 'TON iHS' = TON_ihs, 'CIM nSL' = CIM_nsl, 'NZM nSL' = NZM_nsl, 'SAM nSL' = SAM_nsl, 'TON nSL' = TON_nsl)%>%  head() %>% kable(., booktabs = TRUE, linesep = "", format = 'latex', caption = '(\\#tab:ihsnslPolGenes) Significant markers for iHS and nSL in Polynesian populations.') %>% kable_styling(latex_options = 'scale_down', font_size = 8)
+
 rm(sig_ihs_val)
+rm(sig_nsl_val)        
 ```
 
-```{r}
+### Significant \gls{xpehh} markers in Polynesian populations
 
-sig_nsl_val %>% filter(superpop == 'POL', !is.na(genename) & genename != "") %>% select(Pop = pop, chrom, chrom_start, chrom_end, genename, nSL = statvalue) %>% arrange(chrom, chrom_start, Pop) %T>% {write.csv(., file = "Appendices/03-nsl-Pol.csv", row.names = FALSE, quote = FALSE)}  %>% head(0) %>% kable(., booktabs = TRUE, format = 'latex', caption = '(\\#tab:nslPolgenes) All genes that had a significant nSL value in Polynesian populations.') %>% kableExtra::footnote("Appendices/03-nsl-Pol.csv", threeparttable = TRUE)
-rm(sig_nsl_val)
-```
-
-```{r, eval = TRUE, message=FALSE}
+```{r, eval = TRUE, message=FALSE, results='hold'}
 xpehh <- read_delim('~/data/NZ_coreExome_1kgp/haplotype/sig_xpehh_29-10-2017.csv', delim = ',') %>% filter(!pop1 %in% c("POL","EPN","WPN", "NAD"), !pop2 %in% c("POL","EPN","WPN", "NAD")) %>% filter(abs(xpehh_value) > 2.6)
 xpehh %>% filter(!is.na(genename) & genename != "")%>% select(Pop1 = pop1,Pop2 = pop2, chrom, chrom_start, chrom_end,XPEHH = xpehh_value, Genename = genename)  %>% arrange(chrom, chrom_start, Pop1, Pop2) %T>% 
   {
   #write.csv(., file = "Appendices/03-xpehh-Pol.csv", row.names = FALSE, quote = FALSE)
-  }  %>% head(0) %>% kable(., booktabs = TRUE, format = 'latex', caption = '(\\#tab:xpehhPolgenes) All genes that had a significant XP-EHH value in Polynesian populations.') %>% kableExtra::footnote("Appendices/03-xpehh-Pol.csv", threeparttable = TRUE)
+  } %>% group_by(Pop1) %>% mutate(grouped_id = row_number()) %>% spread(Pop2, XPEHH) %>% select(-grouped_id, -chrom_end)%>% rename(Population = Pop1, Chromsome = chrom, Position = chrom_start) %>%   head(20) %>% kable(., booktabs = TRUE, format = 'latex', caption = '(\\#tab:xpehhPolgenes) Genes that had a significant XP-EHH values in Polynesian populations.') %>% column_spec(column = 1:3, width = '5em') %>% column_spec(column = 5:36, width = '3em')%>%  kableExtra::kable_styling(font_size = 6)%>% kableExtra::footnote("Appendices/03-xpehh-Pol.csv", threeparttable = TRUE) %>% landscape()
 rm(xpehh)
 ```
 
-```{r, eval = TRUE}
+\FloatBarrier
+
+```{r, eval = TRUE, results='hold'}
 immunePol <- readRDS("Appendices/03-immunePol.RDS")
  immunePol %>% #filter(genename %in% immune_keep) %>% 
   mutate_all(., function(x){replace(x, x == 0, "")}) %>%
@@ -167,6 +183,8 @@ lower_sig_stats %>% filter(statname == 'Fu.Li.F', pop %in% c('CIM','NZM','SAM','
 ```{r zePol, results='asis', eval = FALSE}
 lower_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('CIM','NZM','SAM','TON')) %>% anti_join(., lower_sig_stats %>% filter(statname == 'Zeng.E', !pop %in% c('CIM','NZM','SAM','TON')), by = "SYMBOL") %>% select(chrom, SYMBOL, pop) %>% distinct() %>% spread(., key=pop, value = pop) %>% replace_na(list(CIM = "", NZM = "", SAM = "", TON = "")) %>% unite(., col = Pop, c('CIM','NZM','SAM','TON'), sep = ',') %>% mutate(Pop = stringr::str_replace_all(Pop, "[,]+", ',') %>% stringr::str_replace_all(., pattern = '^[,]+|[,]$', replacement = "") %>% stringr::str_replace_all(., ",", ", "))%>% mutate(chr = as.numeric(sapply(chrom, function(x){strsplit(x, split = 'r')[[1]][2]}))) %>% arrange(chr) %>% select(-chr) %>%head() %>%  kable(.,booktab = TRUE, longtable = TRUE, caption = "(\\#tab:lowersigzePol) Loci that had a Zeng's E in the lower tail that was only found in a Polynesian population")
 ```
+
+\FloatBarrier
 
 ## Chapter 4 Tables
 
