--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -2698,7 +2698,9 @@ There were `r length(unique(kd_GR$SYMBOL))` genes that were associated with kidn
 kdPol %>% mutate_all(., function(x){replace(x, x == 0, "")}) %>%
   mutate(genename = map_chr(genename, ~ cell_spec(.x, italic = TRUE, format = 'latex'))) %>% 
   kable(., caption = '(\\#tab:kdPol) Kidney disease-associated loci that showed signs of possible selection in Polynesian populations', longtable = TRUE, format = 'latex', escape = FALSE, booktabs = TRUE,
-        col.names = c('Population','Gene','AFR','AMR','EAS','EUR','POL','SAS','iHS','nSL',"Fay \\& Wu's H", "Fu \\& Li's F", "Tajima's D"," Zeng's E")) %>% kableExtra::row_spec(0, angle = 90) %>%add_header_above(., c("","","XP-EHH" = 6, rep("",6)))%>%  kable_styling(latex_options = "repeat_header", font_size = 8) %>% 
+        col.names = c('Population','Gene','AFR','AMR','EAS','EUR','POL','SAS','iHS','nSL',"Fay \\& Wu's H", "Fu \\& Li's F", "Tajima's D"," Zeng's E")) %>% 
+  kableExtra::row_spec(0, angle = 90) %>% 
+  add_header_above(., c("","","XP-EHH" = 6, rep("",6)))%>%  kable_styling(latex_options = "repeat_header", font_size = 8) %>% 
    kableExtra::footnote(general = c("XP-EHH is the number of populations from the super population that had at", 
                                    "least one marker sigificant in the gene. Integrated haplotype homozygosity",
                                    "score and nSL are the number of significant markers. Fay and Wu's H,",
@@ -2748,8 +2750,11 @@ metsynPol %>% mutate_all(., function(x){replace(x, x == 0, "")}) %>%
   mutate(genename = map_chr(genename, ~ cell_spec(.x, italic = TRUE, format = 'latex'))) %>% 
   kable(., caption = '(\\#tab:metsynTab) Metabolic syndrome-associated genes that showed signs of possible selection in Polynesian populations', 
         longtable = TRUE, format = 'latex', booktabs = TRUE, escape = FALSE,
-        col.names = c('Population','Gene','AFR','AMR','EAS','iHS','nSL',"Fay \\& Wu's H", " Fu \\& Li's F", "Tajima's D"," Zeng's E")) %>% kableExtra::row_spec(0, angle = 90) %>%add_header_above(., c("","","XP-EHH" = 6, rep("",6)))%>%  kable_styling(latex_options = "repeat_header", font_size = 8) %>% 
-   kableExtra::footnote(general = c("XP-EHH is the number of populations from the super population that had at", 
+        col.names = c('Population','Gene','AFR','AMR','EAS','iHS','nSL',"Fay \\& Wu's H", " Fu \\& Li's F", "Tajima's D"," Zeng's E")) %>% 
+  kableExtra::row_spec(0, angle = 90) %>% 
+  add_header_above(., c("","","XP-EHH" = 3, rep("",6)))%>%  
+  kable_styling(latex_options = "repeat_header", font_size = 8) %>% 
+  kableExtra::footnote(general = c("XP-EHH is the number of populations from the super population that had at", 
                                    "least one marker sigificant in the gene. Integrated haplotype homozygosity",
                                    "score and nSL are the number of significant markers. Fay and Wu's H,",
                                    " Fu and Li's F, Tajima's D, and Zeng's E are the number of windows",
